<resources>
    <string name="app_name">喷雾平台控制系统</string>
    <string name="button">使能</string>
    <string name="connect">连接</string>
    <string name="PlcIP">10.0.1.121</string>
    <string name="IPLabel">PLC地址：</string>
    <string name="X_Speed_Label">速度：</string>
    <string name="xAutoRun">X轴自动运行</string>
    <string name="xStopRun">X轴停止运行</string>
    <string name="yCW">Y轴正向运转</string>
    <string name="yCWW">Y轴反向运转</string>
    <string name="zCW">Z轴正向运转</string>
    <string name="zCWW">Z轴反向运转</string>
    <string name="xCW">X轴正向运转</string>
    <string name="xCWW">X轴反向运转</string>
    <string name="CopyRight">济南大学机械学院张成梁课题组版权所有</string>
    <string name="WindSwitch">风机</string>
    <string name="Pump">泵</string>
    <string name="Num1Value">1#压力：</string>
    <string name="Num2Value">2#压力：</string>
    <string name="Num3Value">3#压力：</string>
    <string name="Value1">0000</string>
    <string name="Value2">0000</string>
    <string name="Value3">0000</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
